# ximea_tools

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
_legacy/: recorder.py
docs/: api.rst  conf.py  index.rst
src/ximea_tools/: __init__.py  camera.py  capabilities.py  cli.py  config.py  constants.py  discovery.py  recorder.py  uvc_camera.py  writer.py
src/ximea_tools/gui/: __init__.py  app.py  camera_picker.py  camera_worker.py  controls_dock.py  fake_camera.py  histogram_widget.py  main_window.py  preview_widget.py  recording_dock.py  settings.py  trigger_dock.py
tests/: conftest.py  test_camera_mock.py  test_capabilities.py  test_config.py  test_discovery.py  test_gui_camera_worker.py  test_gui_fake_camera.py  test_gui_preview.py  test_gui_preview_zoom.py  test_gui_recording_dock.py  test_gui_recording_dock_memory.py  test_gui_recording_errors.py  test_gui_settings.py  test_recorder.py  test_ring_buffer.py  test_smoke.py  test_uvc_camera.py  test_uvc_software_roi.py  test_writer.py  test_writer_monochrome.py
ximea/: ximeaExample.py
ximea/ximea/: __init__.py  xiapi.py  xidefs.py
